# rest-process

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
rest_process/: server.py  start.py  tests.py
rest_process/processes/: grow.py
scripts/: dev-link.sh
