[project]
name = "rest-process"
version = "1.0.1"
description = "server for hosting processes and composites from process-bigraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-utils>=0.8.0",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.35.0",

    "process-bigraph",
#    "vivarium-interface",
#    "spatio-flux",
]


[tool.uv.sources]
# bigraph-schema = { path = "../bigraph-schema", editable = true }
# process-bigraph = { path = "../process-bigraph", editable = true }
# spatio-flux = { path = "../spatio-flux", editable = true }
# vivarium-interface = { path = "../vivarium-interface", editable = true }
