[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rest-process"
version = "1.1.0"
description = "server for hosting processes and composites from process-bigraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bigraph-schema>=1.2.4",
    "process-bigraph>=1.2.2",
    "fastapi>=0.116.1",
    "fastapi-utils>=0.8.0",
    "fire",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rest_process*"]

[tool.pytest.ini_options]
testpaths = ["rest_process"]
python_files = ["tests.py", "test_*.py"]
